--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://manojodela.github.io/jewelry-blingg",
+  "homepage": "https://manojodela.github.io/jewelry",
   "name": "jewelry_store",
   "version": "0.1.0",
   "private": true,
